--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.8.0",
     "@pinia/testing": "^0.1.4",
+    "@types/chrome": "^0.0.269",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-istanbul": "^2.0.5",
