--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["node"]
+    "types": ["node", "chrome"]
   },
   "include": [
     "src/**/*.ts",
