--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "core-js-pure": "^3.37.1",
     "pinia": "^2.2.0",
+    "vant": "^4.9.4",
     "vue": "^3.4.31",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0"
@@ -29,6 +31,7 @@
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
+    "commitlint": "^19.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -41,7 +44,7 @@
     "normalize.css": "^8.0.1",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
-    "sass": "^1.77.8",
+    "sass": "1.77.6",
     "stylelint": "^16.8.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
