--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "VPN Proxy Chrome Extension",
+  "name": "Wireguard VPN Proxy",
   "version": "1.0.0",
-  "description": "VPN Proxy Chrome Extension",
+  "description": "Wireguard VPN Proxy Chrome Extension",
   "manifest_version": 3,
   "author": "Ven Jin",
   "action": {
     "default_popup": "index.html",
-    "default_title": "VPN Proxy Chrome Extension"
-  }
+    "default_title": "Wireguard VPN Proxy"
+  },
+  "permissions": [
+    "proxy",
+    "scripting"
+  ]
 }
